Refactor gitignore file to ignore compilation and temporary files
Update gitignore to exclude compilation and temporary files types. This ensures these files are not included in the repository, reducing clutter and preventing accidental commits. No associated issues.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,36 @@
-/.vs
-/.vscode
+.vs
+.vscode
+
+## Compilation files
+[Bb]in/
+[Oo]bj/
+*.user
+*.suo
+*.userprefs
+debug*/
+*.pdb
+*.dll
+*.exe
+
+## Package files
+# it's best to unzip these files and commit the raw source code
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+## Log files
+*.log
+
+## Temporary files
+*.bak
+*.cache
+*.swp
+*.nib
+local.properties
+*.DS_Store
