--- a/CoinCTraderC3/CoinCTraderC3.csproj
+++ b/CoinCTraderC3/CoinCTraderC3.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutomatedTrading" Version="1.0.5" />
     <PackageReference Include="cTrader.Automate" Version="1.*" />
   </ItemGroup>
 </Project>
