Enhance timezone handling in trading bot
Refactored time zone configuration to support custom UTC zones, improving the flexibility of the trading bot's scheduling system. Removed the previous 'UserTimeOffset' parameter and replaced it with a more robust 'TimeZone UTC' selection, defaulting to a custom UTC time zone. This change accommodates different user locales by allowing direct UTC zone selection for trade timing accuracy. Additionally, updated the 'AutomatedTrading' package reference to a wildcard version for easier maintenance and compatibility with future updates.

--- a/CoinCTraderC3/CoinCTraderC3.csproj
+++ b/CoinCTraderC3/CoinCTraderC3.csproj
@@ -4,7 +4,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutomatedTrading" Version="1.0.5" />
+    <PackageReference Include="AutomatedTrading" Version="1.0.*" />
     <PackageReference Include="cTrader.Automate" Version="1.*" />
   </ItemGroup>
 </Project>
